@@ -93,6 +93,7 @@ Release 0.9.2
   without overriding others
 - renamed ZMBanners::getBannerForName to getBannersForGroupName
 - make ZMBanners return no results if no identifiers are set for a group
+- add transaction support to ZMDatabase (not used, yet)
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
